--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,7 @@
     </head>
     <body>
         {% block header %}
+        
             <div class="header-top-w3layouts">
                 <div class="container">
                     <div class="col-md-6 logo-w3">
@@ -47,17 +48,17 @@
                                                 <div class="row">
                                                     <div class="col-sm-6">
                                                         <ul class="multi-column-dropdown">
-                                                            <li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i>Gafas Product</a></li>
-                                                            <li><a href="men"><i class="fa fa-angle-right" aria-hidden="true"></i>Trajes Product</a></li>
-                                                            <li><a href="kids"> <i class="fa fa-angle-right" aria-hidden="true"></i>Aletas Product</a></li>                                                    
+                                                            <li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i>Gafas</a></li>
+                                                            <li><a href="men"><i class="fa fa-angle-right" aria-hidden="true"></i>Trajes</a></li>
+                                                            <li><a href="kids"> <i class="fa fa-angle-right" aria-hidden="true"></i>Aletas</a></li>                                                    
                                                         </ul>
                                                     
                                                     </div>
                                                     <div class="col-sm-6">
                                                         <ul class="multi-column-dropdown">
-                                                            <li><a href="producto/botellas"><i class="fa fa-angle-right" aria-hidden="true"></i>Botellas Product</a></li>
-                                                            <li><a href="night"><i class="fa fa-angle-right" aria-hidden="true"></i>Medidor Product</a></li>
-                                                            <li><a href="formals"><i class="fa fa-angle-right" aria-hidden="true"></i>Camaras Product</a></li>                                                    
+                                                            <li><a href="producto/botellas"><i class="fa fa-angle-right" aria-hidden="true"></i>Botellas</a></li>
+                                                            <li><a href="night"><i class="fa fa-angle-right" aria-hidden="true"></i>Medidores</a></li>
+                                                            <li><a href="formals"><i class="fa fa-angle-right" aria-hidden="true"></i>Camaras</a></li>                                                    
                                                         </ul>						
                                                     </div>
                                                     <div class="clearfix"></div>
@@ -69,23 +70,7 @@
                             </div>
                         </nav>
                     </div>
-                    <div class="col-md-4 search-agileinfo">
-                        <form action="#" method="post">
-                            <input type="search" name="Search" placeholder="Search for a Product..." required="">
-                            <button type="submit" class="btn btn-default search" aria-label="Left Align">
-                                <i class="fa fa-search" aria-hidden="true"> </i>
-                            </button>
-                        </form>
-                    </div>
-                    <div class="col-md-1 cart-wthree">
-                        <div class="cart"> 
-                            <form action="#" method="post" class="last"> 
-                                <input type="hidden" name="cmd" value="_cart" />
-                                <input type="hidden" name="display" value="1" />
-                                <button class="w3view-cart" type="submit" name="submit" value=""><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></button>
-                            </form>  
-                        </div>
-                    </div>
+                    
                     <div class="clearfix"></div>
                 </div>
             </div>        
@@ -99,9 +84,9 @@
                     <div class="col-md-4 footer-grids fgd1">
                     <a href="/index"><img src={{asset("images/logo2.png")}} alt=" " /><h3>WILDSEA<span>CLUB</span></h3></a>
                     <ul>
-                        <li>1234k Avenue, 4th block,</li>
-                        <li>New York City.</li>
-                        <li><a href="mailto:info@example.com">info@example.com</a></li>
+                        <li>Calle Fuente del Alamillo</li>
+                        <li>Jaén, Ciudad</li>
+                        <li><a href="mailto:guillermo@example.com">guillermo@example.com</a></li>
                         <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                         <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
                         <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -128,7 +113,6 @@
                         </ul>
                     </div>
                     <div class="clearfix"></div>
-                    <p class="copy-right">© 2016 Fashion Club . All rights reserved | Design by <a href="http://w3layouts.com"> W3layouts.</a></p>
                 </div>
             </div>           
         {% endblock %}
@@ -136,6 +120,7 @@
         {% block javascripts %}
             <script src={{asset("js/jquery-3.6.0.min.js")}}></script>
             <script src={{asset("js/bootstrap.js")}}></script>
+            <script src={{asset("js/bootstrap.bundle.min.js")}}></script>
             <script src={{asset("js/minicart.js")}}></script>
             <script src={{asset("js/jquery.wmuSlider.js")}}></script>
             <script type="text/javascript" src={{asset("js/jquery.flexisel.js")}}></script>
