--- a/templates/producto_botellas/index.html.twig
+++ b/templates/producto_botellas/index.html.twig
@@ -1,25 +1,62 @@
 {% extends 'base.html.twig' %}
 
+
+{% block stylesheets %}
+	{{parent()}}
+
+	<link rel="stylesheet" href="https:////cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css"/>
+{% endblock %}
+
+
+
 {% block body %}
 
-<div class="modal face" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal face" id="modalReservas" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	<div class="modal-dialog">
 		<div class="modal-content">
 		<div class="modal-header">
-			<h5 class="modal-title" id="modalLabel">Horarios de apertura</h5>
+			<h5 class="modal-title" id="modalLabel">Carrito de la compra</h5>
 		</div>
 		<div class="modal-body">
+
+
+			<table id="myTable" class="display">
+				<thead>
+					<tr>
+						<th>Nombre</th>
+						<th>Cantidad</th>
+						<th>Precio</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Row 1 Data 1</td>
+						<td>Row 1 Data 2</td>
+					</tr>
+					<tr>
+						<td>Row 2 Data 1</td>
+						<td>Row 2 Data 2</td>
+					</tr>
+					<tr>
+						<td>Row 3 Data 1</td>
+						<td>Row 3 Data 2</td>
+					</tr>
+				</tbody>
+			</table>
+
+			<label>Fecha de inicio de reserva:</label><input type="date" id="datepicker">
+			<label>Cantidad de horas:</label>   
+			    <select id="selectTramos">
+				</select>
+			
 		</div>
 		<div class="modal-footer">
 			<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+			<button type="button" class="btn btn-primary">Alquilar</button>
 		</div>
 		</div>
 	</div>
 </div>
-
-
-
-
 
 <div id="overlay">
 	<div class="loader"></div>
@@ -438,4 +475,6 @@
 {% block javascripts %}
 	{{parent()}}
 	<script src={{asset("js/mio/pintaGafas.js")}}></script>
+	<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+	<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 {% endblock %}
