un pequeño paso para ...

--- a/templates/producto_botellas/index.html.twig
+++ b/templates/producto_botellas/index.html.twig
@@ -32,14 +32,17 @@
 					<tr>
 						<td>Row 1 Data 1</td>
 						<td>Row 1 Data 2</td>
+						<td>Row 1 Data 3</td>
 					</tr>
 					<tr>
 						<td>Row 2 Data 1</td>
 						<td>Row 2 Data 2</td>
+						<td>Row 2 Data 3</td>
 					</tr>
 					<tr>
 						<td>Row 3 Data 1</td>
 						<td>Row 3 Data 2</td>
+						<td>Row 3 Data 3</td>
 					</tr>
 				</tbody>
 			</table>
@@ -52,7 +55,7 @@
 		</div>
 		<div class="modal-footer">
 			<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-			<button type="button" class="btn btn-primary">Alquilar</button>
+			<button type="button" class="btn btn-primary" id="btnAlquilar">Alquilar</button>
 		</div>
 		</div>
 	</div>
