casi alquila :DD

--- a/templates/producto_botellas/index.html.twig
+++ b/templates/producto_botellas/index.html.twig
@@ -48,7 +48,7 @@
 			</table>
 
 			<label>Fecha de inicio de reserva:</label><input type="date" id="datepicker">
-			<label>Cantidad de horas:</label>   
+			<label>Cantidad de dias:</label>   
 			    <select id="selectTramos">
 				</select>
 			
