--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -118,16 +118,16 @@
 <!-- about-bottom -->
 	<div class="about-bottom">
 		<div class="container">
-			<h3> Flat <span>50%</span> Off</h3>
-			<h4>On women Accessories</h4>
-			<a href="Jewellery.html">Shop Now</a>
+			<h3>Aprovecha <span>50%</span> descuento</h3>
+			<h4>Nuestras botellas de oxigeno</h4>
+			<a href="/producto/botellas">Miralas Ya</a>
 		</div>
 	</div>
 <!-- //about-bottom -->
 <!--team-->
 <div class="team" id="team">
 	<div class="container">
-		<h3> Our Team</h3>
+		<h3>Nuestro equipo</h3>
 		<div class="team-grids">
 			<div class="col-md-3 team-grid">
 									<div class="team-img">
@@ -142,7 +142,7 @@
 										</figcaption>
 									</div>
 									<h4>John Filmr Doe</h4>
-									<h5>Managing Director</h5>
+									<h5>Directora Ejecutiva</h5>
 			</div>
 			<div class="col-md-3 team-grid">
 				<div class="team-img">
@@ -157,7 +157,7 @@
 					</figcaption>
 				</div>
 				<h4>Jaye Smith</h4>
-				<h5>Lead Developer</h5>
+				<h5>Full-Stack Developer</h5>
 			</div>
 			<div class="col-md-3 team-grid">
 				<div class="team-img">
@@ -172,7 +172,7 @@
 					</figcaption>
 				</div>
 				<h4>Mike Arney</h4>
-				<h5>Fashion Designer</h5>
+				<h5>Diseñadora de paginas web</h5>
 			</div>
 			<div class="col-md-3 team-grid">
 				<div class="team-img">
@@ -187,7 +187,7 @@
 					</figcaption>
 				</div>
 				<h4>Michele Lampa</h4>
-				<h5>fashion Designer</h5>
+				<h5>Programadora</h5>
 			</div>
 			<div class="clearfix"></div>
 		</div>
