--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
                     <div class="col-md-6 phone-w3l">
                         <ul>
                             <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span></li>
-                            <li>+18045403380</li>
+                            <li>+34 601 208 532</li>
                         </ul>
                     </div>
                     <div class="clearfix"></div>
@@ -94,22 +94,22 @@
                     </ul>
                     </div>
                     <div class="col-md-4 footer-grids fgd2">
-                        <h4>Information</h4> 
+                        <h4>Informacion</h4> 
                         <ul>
-                            <li><a href="/contact">Contact Us</a></li>
-                            <li><a href="icons">Web Icons</a></li>
-                            <li><a href="typography">Typography</a></li>
-                            <li><a href="faq">FAQ's</a></li>
+                            <li><a href="/contact">Contactanos</a></li>
+                            <li><a href="icons">Iconos Web</a></li>
+                            <li><a href="typography">Tipografia</a></li>
+                            <li><a href="/others/guia.pdf">Guia</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4 footer-grids fgd4">
-                        <h4>My Account</h4> 
+                        <h4>My Cuenta</h4> 
                         <ul>
                             
-                            <li><a href="/login">Login</a></li>
-                            <li><a href="/register">Register</a></li>
+                            <li><a href="/login">Logueate</a></li>
+                            <li><a href="/register">Registrate</a></li>
                             <li><a href="/show/profile">Ver perfil</a></li>
-                            <li><a href="/admin">Admin</a></li>
+                            <li><a href="/admin">Administracion</a></li>
                         </ul>
                     </div>
                     <div class="clearfix"></div>
